Solution (#4)
* a complete swagger spec

* remove operationIDs

* version bump

* proj setup readme updates, cli reference

* wordwrap fails

* readme tweaks

* exercise 1 complete

* exercise 2

* exercise 3a

* exercise 3 complete

* no product_id in cart item
